# datamoverapp

./: .rustrc  README.md  TAURI_README.md  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: AppCard.tsx  AppLayout.tsx  FileExplorer.tsx  FileSyncApp.tsx  FolderConfigForm.tsx  FolderSelector.tsx  PollingControl.tsx  SyncControls.tsx  SyncErrorMessage.tsx  SyncHeader.tsx  SyncStatus.tsx
src/components/FileExplorer/: FolderBrowser.tsx  FolderItem.tsx  folderUtils.ts  index.tsx
src/components/explorer/: FolderBrowserContent.tsx  FolderBrowserDialog.tsx  FolderBrowserFooter.tsx  FolderBrowserHeader.tsx  FolderItem.tsx  folderBrowserService.ts  folderBrowserUtils.ts
src/hooks/: useSyncConfig.ts  useSyncOperations.ts  useSyncStatus.ts  useSyncValidation.ts
src/pages/: Index.tsx  NotFound.tsx
src/services/: configValidator.ts  environmentDetector.ts  fileOperations.ts  fileSyncService.ts  pollingService.ts  syncOperations.ts  types.ts
src/types/: tauri.d.ts
