
[package]
name = "file-sync-app"
version = "0.1.0"
description = "A Tauri File Sync Application"
authors = ["You"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70.0"  # Updated to a more recent Rust version

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "path-all", "window-all"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` flag
# DO NOT REMOVE!!
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
